@@ -15,7 +15,7 @@ foreach( srcfile ${FASP_TUTSRC} )
     endif()
     if(execfile)
       add_executable( ${execfile} main/${srcfile} )
-      target_link_libraries( ${execfile} fasp  ${UMFPACK_LIBRARIES} ${SUPERLU_LIBRARIES} ${ADD_STDLIBS} ) 
+      target_link_libraries( ${execfile} fasp  ${UMFPACK_LIBRARIES} ${SUPERLU_LIBRARIES} ${MUMPS_LIBRARIES} ${ADD_STDLIBS} ) 
       install(TARGETS ${execfile} DESTINATION ${FASP_SOURCE_DIR}/tutorial)
 #      message( "${execfile} ${srcfile} ")
     endif(execfile)
